@@ -7,6 +7,7 @@
     <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
 
     <package name="mingw32-zlib" alias="zlib">
+      <affiliate group="MinGW Standard Libraries" />
       <description lang="en" title="A Massively Spiffy Yet Delicately Unobtrusive Compression Library (docs)">
         <paragraph>The zlib compression library provides in-memory compression
           and decompression functions, including integrity checks of the
@@ -19,30 +20,45 @@
       <licence tarname="zlib-%-mingw32-%-lic.tar.%" />
       <source tarname="zlib-%-mingw32-%-src.tar.%" />
 
+      <component class="dll">
+	<release tarname="zlib-1.2.8-1.mingw32-dll.tar.lzma" />
+      </component>
+
+      <component class="dev">
+	<release tarname="zlib-1.2.8-1.mingw32-dev.tar.lzma" />
+      </component>
+
       <component class="doc">
-        <release tarname="zlib-1.2.3-1-mingw32-doc.tar.gz" />
-        <release tarname="zlib-1.2.5-1-mingw32-doc.tar.lzma" />
-        <release tarname="zlib-1.2.5-4-mingw32-doc.tar.lzma" />
+        <release tarname="zlib-1.2.8-1-mingw32-doc.tar.lzma" />
         <release tarname="zlib-1.2.7-1-mingw32-doc.tar.lzma" />
+        <release tarname="zlib-1.2.5-4-mingw32-doc.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-mingw32-doc.tar.lzma" />
+        <release tarname="zlib-1.2.3-1-mingw32-doc.tar.gz" />
       </component>
 
       <component class="lic">
-        <release tarname="zlib-1.2.3-1-mingw32-lic.tar.gz" />
-        <release tarname="zlib-1.2.5-1-mingw32-lic.tar.lzma" />
-        <release tarname="zlib-1.2.5-4-mingw32-lic.tar.lzma" />
+	<release tarname="zlib-1.2.8-1-mingw32-lic.tar.lzma" />
         <release tarname="zlib-1.2.7-1-mingw32-lic.tar.lzma" />
+        <release tarname="zlib-1.2.5-4-mingw32-lic.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-mingw32-lic.tar.lzma" />
+        <release tarname="zlib-1.2.3-1-mingw32-lic.tar.gz" />
       </component>
 
       <component class="man">
-        <release tarname="zlib-1.2.3-1-mingw32-man.tar.gz" />
-        <release tarname="zlib-1.2.5-1-mingw32-man.tar.lzma" />
-        <release tarname="zlib-1.2.5-4-mingw32-man.tar.lzma" />
+	<release tarname="zlib-1.2.8-1-mingw32-man.tar.lzma" />
         <release tarname="zlib-1.2.7-1-mingw32-man.tar.lzma" />
+        <release tarname="zlib-1.2.5-4-mingw32-man.tar.lzma" />
+        <release tarname="zlib-1.2.5-1-mingw32-man.tar.lzma" />
+        <release tarname="zlib-1.2.3-1-mingw32-man.tar.gz" />
       </component>
     </package>
 
     <package name="mingw32-libz" alias="libz">
       <description lang="en" title="A Massively Spiffy Yet Delicately Unobtrusive Compression Library">
+	<paragraph>
+	  NOTE: The zlib DLL and development package is delivered in the primary
+	  zlib package release as of zlib-1.2.8-1.
+	</paragraph>
         <paragraph>The zlib compression library provides in-memory compression
           and decompression functions, including integrity checks of the
           uncompressed data. The libz package provides the runtime and
@@ -85,6 +101,13 @@
 
     <package name="mingw32-minizip" alias="minizip">
       <description lang="en" title="Simple ZIP support from zlib">
+        <paragraph>
+	  NOTE: This program was not delivered with the zlib-1.2.8 release. This
+	  decision was made due to the number of downloads for the package as
+	  well as a belief that the zip and unzip packages are already minimal
+	  enough.  It is therefore considered obsolete and should be removed
+	  from your systems.
+	</paragraph>
         <paragraph>The minizip package provides two simple ZIP archive
           manipulation tools, based on the minizip library from zlib.  More
           sophisticated needs are met by the unzip and zip packages.
@@ -108,6 +131,13 @@
 
     <package name="mingw32-libminizip" alias="libminizip">
       <description lang="en" title="Simple ZIP support from zlib">
+	<paragraph>
+	  NOTE: This program was not delivered with the zlib-1.2.8 release. This
+	  decision was made due to the number of downloads for the package as
+	  well as a belief that the libarchive package is already minimal
+	  enough.  It is therefore considered obsolete and should be removed
+	  from your systems.
+	</paragraph>
         <paragraph>The minizip library provides zlib-based support for
           manipulating ZIP archives. It is suitable for clients that need only
           create, inspect, and unpack such archives; more demanding needs may be
